--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.1",
+    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
