--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.1",
+    "framer-motion": "^6.5.1",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring": "^8.0.5",
+    "react-toastify": "^9.0.7",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
