--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "healty-food",
   "version": "0.1.0",
+  "homepage": "https://ZiadHosny.github.io/Freshio",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -31,6 +32,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -55,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "sass": "^1.54.0"
   }
 }
