--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "healty-food",
+  "homepage": "https://ZiadHosny.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.1",
     "framer-motion": "^6.5.1",
+    "gh-pages": "^4.0.0",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
