--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "healty-food",
-  "homepage": "https://ZiadHosny.github.io",
+  "homepage": "https://ZiadHosny.github.io/Frishio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
